--- a/html/admin.html
+++ b/html/admin.html
@@ -54,7 +54,7 @@
       </div>
 
       <!-- Orders List -->
-      <div id="orders-container" style="display: none">
+      <div id="orders-container" style="display: hide">
         <div id="message" class="mb-3 text-center"></div>
         <div id="orders-list"></div>
       </div>
