--- a/html/order-history.html
+++ b/html/order-history.html
@@ -13,7 +13,7 @@
   <body>
     <div id="header-container"></div>
 
-    <div class="container mt-5">
+    <div class="container mt-5 mb-4">
       <h2 class="mb-4 text-center">Lịch sử đơn hàng</h2>
 
       <div id="order-list"></div>
